flux/apps/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
spec:
  selector:
    matchLabels:
      app: uptime-kuma
  replicas: 1
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: ghcr.io/louislam/uptime-kuma:2.5.5 # {"$imagepolicy": "flux-system:uptime-kuma-policy"}
        ports:
        - containerPort: 3001
        volumeMounts:
        - mountPath: /app/data
          name: data
        resources: {}
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: uptime-kuma-data
