flux/apps/uptime-kuma/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - uptime-kuma.${GLOBAL_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: uptime-kuma
      port: 3001
