flux/apps/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  ingressClassName: nginx
  rules:
  - host: uptime-kuma.${GLOBAL_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
  tls:
    - hosts:
        - uptime-kuma.${GLOBAL_DOMAIN}
      secretName: uptime-kuma-tls
